# SDLJumpStart

./: CMakeLists.txt  README.md  SDL_JumpStart.diff
src/: AssertMsg.cpp  AssertMsg.h  engine.cpp  engine.h  font.cpp  font.h  main.cpp  math_stub.cpp  math_stub.h  sdl_gl.h  sdl_gl_texture.cpp  sdl_gl_texture.h  sdl_utils.cpp
